Extend gpu driver bug fix to Kindle devices

The following Amazon Kindle Fire devices: HDX 8.9" 2013, HDX 8.9" 2014,
and HDX 7" 2013, all suffer the same issue that was causing Issue 670607
on Nexus 7 gen 2 devices. This change will extend that
Nexus 7 driver fix to these devices.

BUG=696627

Review-Url: https://codereview.chromium.org/2721943002
Cr-Commit-Position: refs/heads/master@{#454125}

Former-commit-id: b5eadd9cca9f61b95d5705228e91bbe2e214a5d8