gpu/config/gpu_driver_bug_list_json.cc
@@ -19,7 +19,7 @@ const char kGpuDriverBugListJson[] = LONG_STRING_CONST(
 {
   "name": "gpu driver bug list",
   // Please update the version number whenever you change this file.
-  "version": "9.31",
+  "version": "9.32",
   "entries": [
     {
       "id": 1,
@@ -2323,9 +2323,9 @@ LONG_STRING_CONST(
     {
       "id": 214,
       "description": "Certain versions of Qualcomm driver don't setup scissor state correctly when FBO0 is bound.",
-      "cr_bugs": [670607],
+      "cr_bugs": [670607, 696627],
       "gl_vendor": "Qualcomm.*",
-      "machine_model_name": ["Nexus 7"],
+      "machine_model_name": ["Nexus 7", "KFTHWI", "KFSAWI", "KFAPWI", "KFTHWA", "KFSAWA", "KFAPWA"],
       "features": [
         "force_update_scissor_state_when_binding_fbo0"
       ]
